Solved spacing white issue

--- a/src/main/webapp/app/layouts/main/main.scss
+++ b/src/main/webapp/app/layouts/main/main.scss
@@ -1,7 +1,13 @@
-.container-fluid {
-    height: 800px;
-    width: 95%;
-    .card {
-        height: 90%;
+body {
+    background-color: white;
+    .container-fluid {
+        height: 800px;
+        width: 95%;
+        background-color: white;
+
+        .card {
+            height: 90%;
+            background-color: unset;
+        }
     }
 }
